<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stanislav.admin.timetaskscontroll.AddTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_task"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/editNameTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLines="15"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name_task"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/editFullNameTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/any_text"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/editAnyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mini_task"
            android:textColor="@android:color/black"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/lnForMiniTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editMiniTaskOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/editMiniTaskTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            </LinearLayout>


        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBoxForCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/get_payment_task"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editSumTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/count_task"
                    android:inputType="numberDecimal"
                    android:maxLines="9"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:visibility="gone"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvPlanTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_plan"
                android:textColor="@android:color/black"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerForTimeTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/category_time"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/editTimeTask"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="right"
                    android:hint="@string/count_time"
                    android:inputType="number"
                    android:maxLines="9"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTimeIncomeHour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/tv_for_income"
                    android:textColor="@android:color/black"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tvPaymentIncom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/payment_income"
                    android:textColor="@android:color/black"
                    android:visibility="gone"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</ScrollView>
