<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stanislav.admin.timetaskscontroll.AddTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">


            <TextView
                android:id="@+id/tvFrForNameTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="TextView"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvFrFullNameTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/full_name_task"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tvFrForFullNameTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/my_border_2"
                android:padding="6dp"
                android:text="TextView"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tvFrAnyText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/any_text"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/tvForFrAnyTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/my_border_2"
                android:padding="6dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:visibility="visible"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:text="@string/date_created"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tvFrDateTask"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="TextView"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvFrForSumTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:text="@string/sum_task"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tvFrSumTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="TextView"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvFrForTimeTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/time_plan"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tvFrTimeTask"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="TextView"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvFrForCountSum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/tv_for_income"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tvFrCountSum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/payment_income"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/last_play"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tvFrLastTimePlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="TextView"
                        android:textColor="@android:color/black"
                        android:textStyle="italic"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/all_time_task"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tvFrAllTimePlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="TextView"
                        android:textColor="@android:color/black"
                        android:textStyle="italic"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvFrForRealCountSum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/tv_for_real_income"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/tvFrRealCountSum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="TextView"
                        android:textColor="@android:color/black"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
